--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.10",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.15",
+    "axios": "^1.5.1",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-maps": "^1.8.0",
+    "react-native-safe-area-context": "^4.7.3",
+    "react-native-screens": "^3.26.0",
+    "react-native-vector-icons": "^10.0.0",
+    "rneui": "^1.0.0-stable.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
