--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-animated-pagination-dots": "^0.1.73",
+    "react-native-gesture-handler": "^2.13.3",
     "react-native-maps": "^1.8.0",
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.26.0",
