--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-native-animated-pagination-dots": "^0.1.73",
     "react-native-gesture-handler": "^2.13.3",
     "react-native-maps": "^1.8.0",
+    "react-native-reanimated": "^3.3.0",
+    "react-native-reanimated-carousel": "^3.3.0",
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.26.0",
     "react-native-vector-icons": "^10.0.0",
